c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/address_of_assignment.c
/* The result of an assignment statement is not an lvalue,
 * so it's illegal to take its address.
 */
int main(void) {
    int x = 0;
    int y = 0;
    int *ptr = &(x = y);
    return 0;
}